--- a/app/public/css/home.css
+++ b/app/public/css/home.css
@@ -562,8 +562,6 @@ h1{
             border: none;
         }
 
-      }
-
       .button:hover{
            background:#514f55;
            transform: scale(0.95);
@@ -673,6 +671,10 @@ h1{
                         body{
                              background-image: none;
                              background: #C0A4CB;
+                        }
+
+                        .table-edit button{
+                              bottom: 0;
                         }
                       }
                        
