--- a/app/public/css/home.css
+++ b/app/public/css/home.css
@@ -86,7 +86,6 @@ h1{
       overflow: hidden;
       justify-content: space-evenly;
       position: relative;
-      bottom: -1rem;
       padding: .5rem .75rem;
       width: 100%;
       margin: 0 auto;
@@ -484,6 +483,16 @@ h1{
                        
                   }
 
+                  #clear-table{
+                  padding: 0 .2rem;
+                  }
+
+                  #approve-table{
+                  padding: 0 0 0 .2rem;
+                  }
+
+                  
+
                   .table-edit .far{
                         color: #9b9797;
                   }
@@ -673,8 +682,8 @@ h1{
                              background: #C0A4CB;
                         }
 
-                        .table-edit button{
-                              bottom: 0;
+                        .nav{
+                              bottom: -1;
                         }
                       }
                        
